# mpdqueueapi

./: .gitignore  CMakeLists.txt  Makefile  default.nix  flake.nix  index.html  main.c  main.cpp
include/: CMakeLists.txt  json.cpp
src/: main.c  main.cpp
